--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1503,8 +1503,8 @@ a:hover {
 
 .profile {
   background: url("https://assets.codepen.io/406785/Ansel_Adams_and_camera.jpg") center/cover no-repeat;
-  height: 100vh;
-  width: 100%;
+  height: 60h;
+  width: 40%;
   position: relative;
 }
 .content {
