--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2630,29 +2630,42 @@ a:hover {
   position: absolute;
   top: 50%;
   bottom: 50%;
-  width: 100%;
+  left: 0;
+  right: 0;
 }
 
 .owl-nav.owl-prev,
 .owl-nav.owl-next {
   position: absolute;
-  top: 0;
+  box-sizing: border-box;
   width: 50px;
-  height: 50px;
-  background: #ffffff;
+  background: #035750;
+  line-height: 50px;
   border-radius: 50%;
-  color: #000000;
-  text-align: center;
+  color: #310eb1d3;
   line-height: 50px;
 }
 
 .owl-nav.owl-prev {
+  left: -50px;
   left: 0;
 }
 
 .owl-nav.owl-next {
+  right: -50px;
   right: 0;
 }
+
+.owl-nav.owl-prev:hover,
+.owl-nav.owl-next:hover {
+  background: #1776ea;
+}
+
+.owl-single.owl-dots.owl-dot.active,
+.owl-carousel.owl-dots.owl-dot.active {
+  background: #136ad5;
+}
+
 
 .testimonial {
   max-width: 500px;
