--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1070,35 +1070,70 @@ h4,
 /* Hero Section */
 .hero {
     position: relative;
-    height: 100vh;
+    height: 65vh;
     background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    object-fit: cover;
+    object-position: center;
+    z-index: -1;
+
 }
 
 .carousel-item {
     height: 100%;
+    background-position: center;
+    transition: transform 1s ease;
+    transform: scale(1.1);
+    cursor: pointer;
+    opacity: 0.7;
+    z-index: 1;
+    transition: opacity 0.5s ease;
 }
 
 .carousel-item img {
+    position: absolute;
+    object-position: center;
     object-fit: cover;
-    height: 100%;
+    height: 65vh;
     width: 100%;
+    display: flex;
 }
 
 .carousel-caption h1 {
-    font-size: 3em;
-    font-weight: 600;
+    font-size: 3.5em;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    margin-bottom: 20px;
+    transition: opacity 0.5s ease;
     color: #fff;
+    opacity: 0;
+    z-index: 2;
 }
 
 .carousel-caption p {
     font-size: 1.2em;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    margin-bottom: 8px;
+    transition: opacity 0.5s ease;
+    box-sizing: border-box;
+    border-radius: 16px;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
     color: #fff;
+    
 }
 
 /* Mobile Responsiveness */
 @media (max-width: 768px) {
     .navbar-nav {
-        text-align: center;
+      display: inline-block;
+      margin-left: 0;
+      padding-left: 0;
+      margin-right: 0;
+      padding-right: 0;
+      text-align: center;
     }
 
     .carousel-caption h1 {
